--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "swiper": "5.0.3",
     "typescript": "~3.9.3",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
